# pico-stdio-rtt

./: CMakeLists.txt  README.md  stdio_rtt.c
example/: CMakeLists.txt  main.c
include/pico/: stdio_rtt.h
